--- a/public/about.html
+++ b/public/about.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -198,8 +198,8 @@
     <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
     <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>Solomon: generateJSON.js, Build Pipeline, Deploy, drop down menus, countries.ejs, Macro View, Map, micro page graphs.</p>
-    <p>Nicole: siteGenerator.js, navbar, micro page writing, global folder, home (index) button, index.ejs</p>
+    <p>Solomon: generateJSON.js, build, Deploy, drop down menus, Map, graphics.</p>
+    <p>Nicole: siteGenerator.js, navbar, index.ejs, about.ejs, Build Pipeline, countries.ejs, research on reasoning for micro pages, csv adjustement and according generateJSON.js update</p>
     <p>Solomon+Nicole: CSS/bootstrap done together</p>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
