--- a/public/about.html
+++ b/public/about.html
@@ -198,7 +198,7 @@
     <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
     <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>Solomon: generateJSON.js, Build Pipeline, Deploy, drop down menus, Map, graphics, gitignore</p>
+    <p>Solomon: generateJSON.js, Build Pipeline, Deploy, drop down menus, Map, plot graph on micro pages, gitignore</p>
     <p>Nicole: siteGenerator.js, navbar, index.ejs, about.ejs, countries.ejs, research on reasoning for micro pages, csv adjustement and according generateJSON.js update, header, footer</p>
     <p>Solomon+Nicole: CSS/bootstrap done together</p>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
